# SettingsBus

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/: CMakeLists.txt  DBusService.cpp  DBusService.h  DBusServiceClient.cpp  DBusServiceClient.h  Setting.h  SettingProvider.h  defines.h
src/daemon/: CMakeLists.txt  DBusDaemon.cpp  DBusDaemon.h  main.cpp
test/: CMakeLists.txt
test/app/: CMakeLists.txt
test/core/: CMakeLists.txt  DBusServiceTest.cpp  DBusServiceTest.h
test/daemon/: CMakeLists.txt  DBusServiceTest.cpp  DBusServiceTest.h
