
set(SETTINGSBUSAPP_SRC_DIR ${CMAKE_CURRENT_LIST_DIR} CACHE STRING "" FORCE)

file(GLOB_RECURSE SETTINGSBUSAPP_FILES CONFIGURE_DEPENDS "${SETTINGSBUSAPP_SRC_DIR}/*.cpp" 
    "${SETTINGSBUSAPP_SRC_DIR}/*.h" 
    "${SETTINGSBUSAPP_SRC_DIR}/*.ui")
add_executable(SettingsBus ${SETTINGSBUSAPP_FILES})
target_link_libraries(SettingsBus PRIVATE Qt6::Widgets Qt6::Core Qt6::DBus SettingsBusCore)
set_target_properties(SettingsBus PROPERTIES CXX_STANDARD 20 COMPILE_OPTIONS "${SETTINGSBUS_CXX_FLAGS}")
target_include_directories(SettingsBus PRIVATE ${SETTINGSBUSCORE_SRC_DIR})