set(SETTINGSBUSDAEMON_SRC_DIR ${CMAKE_CURRENT_LIST_DIR} CACHE STRING "" FORCE)


file(GLOB_RECURSE SETTINGSBUSDAEMON_FILES CONFIGURE_DEPENDS "${SETTINGSBUSDAEMON_SRC_DIR}/*.cpp" 
    "${SETTINGSBUSDAEMON_SRC_DIR}/*.h")
add_executable(SettingsBusDaemon ${SETTINGSBUSDAEMON_FILES})
target_link_libraries(SettingsBusDaemon PRIVATE Qt6::Widgets Qt6::Core Qt6::DBus SettingsBusCore)
set_target_properties(SettingsBusDaemon PROPERTIES CXX_STANDARD 20 COMPILE_OPTIONS "${SETTINGSBUS_CXX_FLAGS}")
target_include_directories(SettingsBusDaemon PRIVATE ${SETTINGSBUSCORE_SRC_DIR})